# ggj-next-2024

./: .gitattributes  .gitignore  .nvim.lua  CMakeLists.txt  Game.Desktop  README.md  build.bat  package.bat  run.bat  todo.txt
.docs/: README.md
assets/enemies/: drone.aseprite
assets/objectives/: blue_vase.aseprite  green_vase.aseprite  red_vase.aseprite
assets/player/: player.aseprite
assets/stages/: palette.aseprite
assets/tilesets/: ground.aseprite
include/: arena.h  audio.h  constants.h  game.h  game_init.h  game_math.h  game_nodes.h  input.h  map.h  math.h  node.h  opengl_renderer.h  physics.h  platform.h  renderer.h  text.h  time.h  types.h
shader/: default.vert  downsample.frag  font.frag  mask.frag  mask.vert  post.frag  post.vert  sprite.frag  upsample.frag
src/: arena.cpp  audio.cpp  game.cpp  game_nodes.cpp  input.cpp  main.cpp  map.cpp  math.cpp  node.cpp  opengl_renderer.cpp  physics.cpp  platform.cpp  renderer.cpp  time.cpp  types.cpp
src/game_nodes/: enemy.cpp  objective.cpp  player.cpp  sprite_nodes.cpp  ui_nodes.cpp  utility_nodes.cpp
